Make the ByteBuffersDirectory work
Signed-off-by: Manuel Stör <m.stoer@microstream.one>